added 5th row, added stretchy js, adjusted width

--- a/tile_campaigns/halloween_tiles/halloween_tiles.html
+++ b/tile_campaigns/halloween_tiles/halloween_tiles.html
@@ -4,9 +4,9 @@
 
 .snapwrapper {
 
-	max-width: 960px;
-	*width: 700px;
-	_width: 700px;
+	max-width: 990px;
+	*width: 960px;
+	_width: 960px;
 	margin: 0 auto;
 }
 
@@ -139,7 +139,7 @@
 
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_supersci?rh=i%3Aapparel%2Cn%3A1036592%2Cn%3A%212334084011%2Cn%3A%212334146011%2Cn%3A7462438011%2Cn%3A2227030011%2Cn%3A258061011%2Cn%3A!2334146011%2Cn%3A!2334084011&bbn=7462438011&rw_html_to_wsrp=1">		
+			<a href="amlink:/s/ref=clo_halloween_feat_supersci?rh=i:apparel,n:1036592,n:%212334084011,n:%212334146011,n:7462438011,n:2227030011,n:258061011,n:!2334146011,n:!2334084011&bbn=7462438011&rw_html_to_wsrp=1">		
 				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/2/VOL_superheros2._V358119657_.jpg" alt="Superhero & Sci-Fi Halloween Costumes">
 			</a>
 		</div>
@@ -150,7 +150,7 @@
 <td>
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_era?rh=i%3Aapparel%2Cn%3A1036592%2Cn%3A%212334084011%2Cn%3A%212334146011%2Cn%3A7462439011%2Cn%3A2227030011%2Cn%3A258061011%2Cn%3A!2334146011%2Cn%3A!2334084011&bbn=7462439011&rw_html_to_wsrp=1">				
+			<a href="amlink:/s/ref=clo_halloween_feat_era?rh=i:apparel,n:1036592,n:%212334084011,n:%212334146011,n:7462439011,n:2227030011,n:258061011,n:!2334146011,n:!2334084011&bbn=7462439011&rw_html_to_wsrp=1">				
 				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/2/VOL_period._V358119657_.jpg" alt="Time Period Halloween Costumes">
 			</a>
 		</div>
@@ -162,7 +162,7 @@
 <td>
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_cart?rh=i%3Aapparel%2Cn%3A1036592%2Cn%3A%212334084011%2Cn%3A%212334146011%2Cn%3A7462440011%2Cn%3A2227030011%2Cn%3A258061011%2Cn%3A!2334146011%2Cn%3A!2334084011&bbn=7462440011&rw_html_to_wsrp=1">				
+			<a href="amlink:/s/ref=clo_halloween_feat_cart?rh=i:apparel,n:1036592,n:%212334084011,n:%212334146011,n:7462440011,n:2227030011,n:258061011,n:!2334146011,n:!2334084011&bbn=7462440011&rw_html_to_wsrp=1">				
 				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/2/VOL_cartoon2._V358119657_.jpg" alt="Cartoon & Movie Halloween Costumes">
 			</a>
 		</div>
@@ -172,15 +172,22 @@
 <td>
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_animal?rh=i%3Aapparel%2Cn%3A1036592%2Cn%3A%212334084011%2Cn%3A%212334146011%2Cn%3A7462441011%2Cn%3A2227030011%2Cn%3A258061011%2Cn%3A!2334146011%2Cn%3A!2334084011&bbn=7462441011&rw_html_to_wsrp=1">				
-				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/2/VOL_animal2._V358119657_.jpg" alt="Animal Halloween Costumes">
+			<a href="amlink:/s/ref=clo_halloween_feat_morph?rh=i:apparel,n:1036592,n:%211036682,n:2227030011,n:258061011,p_6:ATVPDKIKX0DER,p_89:Morphsuits&bbn=258061011&rw_html_to_wsrp=1">				
+				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/VOL_morphsuits._V356646274_.jpg" alt="Morphsuit Halloween Costumes">
 			</a>
 		</div>
 	</div>
 </td>
 
-
-
+<td>
+	<div class="catcolumn">
+		<div class="imglink">
+			<a href="amlink:/s/ref=clo_halloween_feat_animal?rh=i:apparel,n:1036592,n:%212334084011,n:%212334146011,n:7462441011,n:2227030011,n:258061011,n:!2334146011,n:!2334084011&bbn=7462441011&rw_html_to_wsrp=1">				
+				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/2/VOL_animal2._V358119657_.jpg" alt="Animal Halloween Costumes">
+			</a>
+		</div>
+	</div>
+</td>
 
 </tr>
 
@@ -195,7 +202,7 @@
 
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_classic?rh=i%3Aapparel%2Cn%3A1036592%2Cn%3A!2334084011%2Cn%3A!2334146011%2Cn%3A7462442011%2Cn%3A2227030011%2Cn%3A258061011&bbn=7462442011&ie=UTF8">				
+			<a href="amlink:/s/ref=clo_halloween_feat_classic?rh=i:apparel,n:1036592,n:!2334084011,n:!2334146011,n:7462442011,n:2227030011,n:258061011&bbn=7462442011&ie=UTF8">				
 				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/2/VOL_classic2._V358119657_.jpg" alt="Classic Halloween Costumes">
 			</a>
 		</div>
@@ -206,7 +213,7 @@
 <td>
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_funny?rh=i%3Aapparel%2Cn%3A2227030011%2Cn%3A258061011%2Cn%3A7462443011%2Cn%3A%212334146011%2Cn%3A%212334084011%2Cn%3A1036592%2Cn%3A!2334084011%2Cn%3A!2334146011&bbn=7462443011&rw_html_to_wsrp=1">				
+			<a href="amlink:/s/ref=clo_halloween_feat_funny?rh=i:apparel,n:2227030011,n:258061011,n:7462443011,n:%212334146011,n:%212334084011,n:1036592,n:!2334084011,n:!2334146011&bbn=7462443011&rw_html_to_wsrp=1">				
 				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/2/VOL_funny2._V358119657_.jpg" alt="Funny Halloween Costumes">
 			</a>
 		</div>
@@ -218,7 +225,7 @@
 <td>
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_occup?rh=i%3Aapparel%2Cn%3A1036592%2Cn%3A%212334084011%2Cn%3A%212334146011%2Cn%3A7462445011%2Cn%3A2227030011%2Cn%3A258061011%2Cn%3A!2334146011%2Cn%3A!2334084011&bbn=7462445011&rw_html_to_wsrp=1">				
+			<a href="amlink:/s/ref=clo_halloween_feat_occup?rh=i:apparel,n:1036592,n:%212334084011,n:%212334146011,n:7462445011,n:2227030011,n:258061011,n:!2334146011,n:!2334084011&bbn=7462445011&rw_html_to_wsrp=1">				
 				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/EDITORIAL/FALL_1/HALLOWEEN/ASSETS/VOL_occupation._V358936583_.jpg" alt="Occupation Halloween Costumes">
 			</a>
 		</div>
@@ -228,14 +235,22 @@
 <td>
 	<div class="catcolumn">
 		<div class="imglink">
-			<a href="amlink:/s/ref=clo_halloween_feat_scary?rh=i%3Aapparel%2Cn%3A1036592%2Cn%3A%212334084011%2Cn%3A%212334146011%2Cn%3A7462446011%2Cn%3A2227030011%2Cn%3A258061011%2Cn%3A!2334146011%2Cn%3A!2334084011&bbn=7462446011&rw_html_to_wsrp=1">
+			<a href="amlink:/s/ref=clo_halloween_feat_scary?rh=i:apparel,n:1036592,n:%212334084011,n:%212334146011,n:7462446011,n:2227030011,n:258061011,n:!2334146011,n:!2334084011&bbn=7462446011&rw_html_to_wsrp=1">
 				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/EDITORIAL/FALL_1/HALLOWEEN/ASSETS/VOL_scary._V358936583_.jpg" alt="Scary Halloween Costumes">
 			</a>
 		</div>
 	</div>
 </td>
 
-
+<td>
+	<div class="catcolumn">
+		<div class="imglink">
+			<a href="amlink:/s/ref=clo_halloween_feat_celeb?rh=i:apparel,n:1036592,n:%212334084011,n:%212334146011,n:7507436011,n:2227030011,n:258061011&bbn=7507436011&rw_html_to_wsrp=1">
+				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/VOL_celebrity._V356646274_.jpg" alt="Celebrity Halloween Costumes">
+			</a>
+		</div>
+	</div>
+</td>
 
 
 </tr>
@@ -300,14 +315,49 @@
 	</div>
 </td>
 
-
+<td>
+	<div class="catcolumn">
+		<div class="imglink">
+			<a href="amlink:/s/ref=clo_halloween_feat_tutu?rh=i:apparel,n:721070011,k:Tutu%7CPetticoat,n:721070011&rw_html_to_wsrp=1">				
+				<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/HALLOWEEN/TILES/VOL_tutu._V356646274_.jpg" alt="Halloween Wigs">
+			</a>
+		</div>
+		
+	</div>
+</td>
 
 
 </tr>
 
 </tbody></table>
 
+<script type="text/javascript">
+amznJQ.available('jQuery', function() {
 
+	var snapCategoryWidgetVD = function() {
+		var ff = jQuery(".newSaleWidget");
+		if (ff.width() == 0) {
+			setTimeout(function() { snapCategoryWidgetVD(); }, 10);
+			return;
+		}
+		var minGutter	= 18;
+		ff.find("tr").each(function() {
+			var width	= Math.min(ff.width(), jQuery('body').width() - 180);
+			var n		= Math.floor(width / (180 + minGutter));
+			jQuery(this).find("td").each(function(i){
+				if (i < n || i < 4) {
+					jQuery(this).show();
+				} else {
+					jQuery(this).hide();
+				}
+			});
+		});
+	}
+
+	snapCategoryWidgetVD();
+	jQuery(window).resize(function() { snapCategoryWidgetVD(); });
+});
+</script>
 
 
 </div>
