Revert "updating slate replace functions"
This reverts commit c1f10f2c7c2b216621753f612571412b4d50b5a5.

--- a/video_projects/fall_outerwear/clothing_homepage_tcg/airy_tcg.html
+++ b/video_projects/fall_outerwear/clothing_homepage_tcg/airy_tcg.html
@@ -197,7 +197,8 @@
         t.play();
 		
 		var swapSlate = function() {
-			var img = e('<img />').attr({ 'id': failslate, 'src': finalSlate}).appendTo(e('#asin-video-slate'));
+			var slate = e("#af-slate");
+			slate.attr("src", finalSlate);
 		}
 		
 		var removeLoader = function() {
@@ -247,13 +248,13 @@
 	 
             if (typeof e.P === "object") {
                 e.P.when("A").execute(function (n) {
-				
-					var img = n.$('<img />').attr({ 'id': failslate, 'src': finalSlate}).appendTo(n.$('#asin-video-slate'));
-
+					var slate = n.$("#af-slate");
+					slate.attr("src", "wsrp_rewrite?rw_urltype=resource&rw_resourcetype=url&rw_imagetype=general&rw_name=/AMAZON_FASHION/2013/GATEWAY/FALL1/VIDEO/TEST2/Outerwear_billboard_exit/wsrp_rewrite");
                 })
             } else {
                 e.amznJQ.onReady("jQuery", function () {
-					var img = jQuery('<img />').attr({ 'id': failslate, 'src': finalSlate}).appendTo(n.$('#asin-video-slate'));
+					var slate = jQuery("#af-slate");
+					slate.attr("src", "wsrp_rewrite?rw_urltype=resource&rw_resourcetype=url&rw_imagetype=general&rw_name=/AMAZON_FASHION/2013/GATEWAY/FALL1/VIDEO/TEST2/Outerwear_billboard_exit/wsrp_rewrite");
                 })
             }
 	 
