--- a/fitguide_running_shoes/mens_sdf.html
+++ b/fitguide_running_shoes/mens_sdf.html
@@ -345,8 +345,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-right"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-road-cta graphic-right"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-right"><a href="amlink:/dp/B00AHNIX5Y?ref=sho_runguide_m_MizunoWaveRider16"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-road-cta graphic-right"><a href="amlink:/b/ref=sho_runguide_m_road?node=7532477011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section2">
@@ -368,8 +368,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-left"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-marathon-cta graphic-left"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-left"><a href="amlink:/dp/B00ASH1EBE?ref=sho_runguide_m_NewBalanceM1260v3"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-marathon-cta graphic-left"><a href="amlink:/b/ref=sho_runguide_m_mara?node=7532479011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section3">
@@ -391,8 +391,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-right"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-minimal-cta graphic-right"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-right"><a href="amlink:/dp/B0087IBS30?ref=sho_runguide_m_ASICSGL33v2"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-minimal-cta graphic-right"><a href="amlink:/b/ref=sho_runguide_m_mini?node=7532472011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section4">
@@ -414,8 +414,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-left"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-trail-cta graphic-left"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-left"><a href="amlink:/dp/B00B98SIGU?ref=sho_runguide_m_MerrellGlove2"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-trail-cta graphic-left"><a href="amlink:/b/ref=sho_runguide_m_trail?node=7532474011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section5">
@@ -437,8 +437,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-right"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-crosstrain-cta graphic-right"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-right"><a href="amlink:/dp/B00AODUCG0?ref=sho_runguide_m_PUMABioWeb"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-crosstrain-cta graphic-right"><a href="amlink:/b/ref=sho_runguide_m_train?node=7532475011"></a></div>
 </div>
 
 
