--- a/fitguide_running_shoes/womens_sdf.html
+++ b/fitguide_running_shoes/womens_sdf.html
@@ -345,8 +345,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-right"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-road-cta graphic-right"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-right"><a href="amlink:/dp/B000T7LEIQ?ref=sho_runguide_w_SauconyRide6"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-road-cta graphic-right"><a href="amlink:/b/ref=sho_runguide_w_road?node=7532468011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section2">
@@ -368,8 +368,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-left"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-marathon-cta graphic-left"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-left"><a href="amlink:/dp/B00AFFUSK2?ref=sho_runguide_w_ASICSgc15"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-marathon-cta graphic-left"><a href="amlink:/b/ref=sho_runguide_w_mara?node=7532470011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section3">
@@ -391,8 +391,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-right"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-minimal-cta graphic-right"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-right"><a href="amlink:/dp/B00AHNFT4M?ref=sho_runguide_w_MizunoSayonara"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-minimal-cta graphic-right"><a href="amlink:/b/ref=sho_runguide_w_mini?node=7532465011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section4">
@@ -414,8 +414,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-left"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-trail-cta graphic-left"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-left"><a href="amlink:/dp/B00B9TYF5M?ref=sho_runguide_w_MerrellGlove2"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-trail-cta graphic-left"><a href="amlink:/b/ref=sho_runguide_w_trail?node=7532466011"></a></div>
 </div>
 
 <div class="af-sdf-content-section" id="af-sdf-content-section5">
@@ -437,8 +437,8 @@ div.af-sdf-accordion div.af-text-crosstrain-3 {background-position: -17px -787px
 				</div>
 		</div>
 	</div>
-	<div class="af-sdf-cta-container container-right"><a href="#REPLACEME"></a></div>
-	<div class="af-sdf-cta-graphic af-sdf-crosstrain-cta graphic-right"><a href="#REPLACEME"></a></div>
+	<div class="af-sdf-cta-container container-right"><a href="amlink:/dp/B00AOCAYDC?ref=sho_runguide_w_PUMAVoltaic4"></a></div>
+	<div class="af-sdf-cta-graphic af-sdf-crosstrain-cta graphic-right"><a href="amlink:/b/ref=sho_runguide_w_train?node=7532467011"></a></div>
 </div>
 
 </div>
