--- a/flp_inline_video/flp_video.html
+++ b/flp_inline_video/flp_video.html
@@ -25,9 +25,9 @@
   position: absolute;
   z-index: 8;
   text-align: center;
-  width: 448px;
-  height: 252px;
-  left: 90px;
+  width: 640px;
+  height: 360px;
+  left: 52px;
   top: 560px;
   cursor: hand;
   cursor: pointer;
@@ -36,10 +36,10 @@
 
 #af-container {
   position: absolute;
-  width: 448px;
-  height: 252px;
+  width: 640px;
+  height: 360px;
   z-index: 5;
-  left: 90px;
+  left: 52px;
   top: 560px;
   display:inline;
   border: 0;
@@ -53,8 +53,8 @@
 #af-videowrapper { 
 
   width:980px; 
-  height:878px; 
-  background:url(https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/billboard_.jpg) no-repeat 0 0; 
+  height:986px; 
+  background:url('https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/main_2._V355461044_.jpg') no-repeat 0 0; 
   position:relative; 
   margin:0px auto; 
   display:block;
@@ -67,8 +67,8 @@
 	background-color: transparent;
 	width: 171px;
 	height: 32px;
-	left: 611px;
-	top: 703px;
+	left: 735px;
+	top: 730px;
 	outline: none;
 }
 
@@ -78,8 +78,8 @@
 	background-color: transparent;
 	width: 101px;
 	height: 32px;
-	left: 797px;
-	top: 703px;
+	left: 770px;
+	top: 780px;
 	outline: none;
 
 
@@ -101,7 +101,7 @@
   
   <div id="af-videowrapper">
   <div id="af-slatecontainer">
-      <img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/last_slate_a.jpg" width="448" height="252" style="display: inline;"/> 
+      <img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/last_slate_a.jpg" width="640" height="360" style="display: inline;"/> 
     <div class="af-play">
 		<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/play_button_red_white_big_.png" width="81" height="81"/> 
 	</div>
