larger video, updated assets

--- a/flp_inline_video/flp_video.html
+++ b/flp_inline_video/flp_video.html
@@ -54,7 +54,7 @@
 
   width:980px; 
   height:986px; 
-  background:url('https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/main_2._V355461044_.jpg') no-repeat 0 0; 
+  background:url('https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/REV/billbaord_2._V355441432_.jpg') no-repeat 0 0; 
   position:relative; 
   margin:0px auto; 
   display:block;
@@ -68,7 +68,7 @@
 	width: 171px;
 	height: 32px;
 	left: 735px;
-	top: 730px;
+	top: 746px;
 	outline: none;
 }
 
@@ -79,7 +79,7 @@
 	width: 101px;
 	height: 32px;
 	left: 770px;
-	top: 780px;
+	top: 796px;
 	outline: none;
 
 
@@ -100,7 +100,7 @@
   
   <div id="af-videowrapper">
   <div id="af-slatecontainer">
-      <img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/last_slate_a.jpg" width="640" height="360" style="display: inline;"/> 
+      <img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/REV/flp_slate._V355441432_.jpg" width="640" height="360" style="display: inline;"/> 
     <div class="af-play">
 		<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/FLP/09_17_13/play_button_red_white_big_.png" width="81" height="81"/> 
 	</div>
